3 pages for web app

--- a/templates/main_equipment_page.html
+++ b/templates/main_equipment_page.html
@@ -26,10 +26,10 @@
         <div class="jumbotron">
             <h1>Equipment Pricer</h1>
             <p class="lead"></p>
-            <p><a class="btn btn-lg btn-success" href="showSignUp" role="button">Find Free Market Value</a>
+            <p><a class="btn btn-lg btn-success" href="/search/used" role="button">Find Free Market Value</a>
             </p>
             <p class="lead"></p>
-            <p><a class="btn btn-lg btn-success" href="showSignUp" role="button">Find Replacement Value</a>
+            <p><a class="btn btn-lg btn-success" href="/search/new" role="button">Find Replacement Value</a>
             </p>
         </div>
  
