made changes to html documents so they would look prettier

--- a/templates/main_equipment_page.html
+++ b/templates/main_equipment_page.html
@@ -2,7 +2,7 @@
 <html lang="en">
  
 <head>
-    <title>Equipment Pricer</title>
+    <title>Equipment Valuation</title>
  
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
  
@@ -16,15 +16,15 @@
         <div class="header">
             <nav>
                 <ul class="nav nav-pills pull-right">
-                    <li role="presentation" class="active"><a href="#">Home</a>
+                    <li role="presentation" class="active"><a href="/">Home</a>
                     </li>
                 </ul>
             </nav>
-            <h3 class="text-muted">Equipment Pricer</h3>
+            <h3 class="text-muted">Equipment Valuation</h3>
         </div>
  
         <div class="jumbotron">
-            <h1>Equipment Pricer</h1>
+            <h1>Equipment Valuation</h1>
             <p class="lead"></p>
             <p><a class="btn btn-lg btn-success" href="/search/used" role="button">Find Free Market Value</a>
             </p>
