--- a/templates/result_page.html
+++ b/templates/result_page.html
@@ -9,28 +9,110 @@
  
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
     <link href="../static/signup.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="main.css">
     
   </head>
  
   <body>
  
     <div class="container">
-      <div class="header">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-            <li role="presentation" ><a href="search_page.html">Back to Search</a></li>
-            <li role="presentation" class="active"><a href="#">Download Results</a></li>
-          </ul>
-        </nav>
+          <div class="header">
+                        <div class="menu">
+                            <nav>
+                              <ul class="nav nav-pills pull-right">
+                                <li role="presentation" ><a href="search_page.html">Back to Search</a></li>
+                                <li role="presentation" class="active"><a href="#">Download Results</a></li>
+                              </ul>
+                            </nav> 
+                            <h1 class="keyword">Keyword</h1>
+                        </div>
+                
+          </div>
 
-        <nav>
-            <ul class="nav nav-pills pull-left">
-                <li role="presentation" >Keyword</li>
-            </ul>  
-        </nav>
-      </div>
+            
 
-      <div class="result_list">
+
+    
+      <div class="result_table">
+         <table>
+
+                  <tr>
+                    <td>Title</td>
+                    <td>Price</td>
+                    <td>Image</td>
+                    <td>URL</td>
+                  </tr>
+                  <tr>
+                    <td>A Project Guide to UX Design by Russ Unger &#38; Carolyn Chandler</td>
+                    <td>In Stock</td>
+                    <td>2</td>
+                    <td>$52.94 ($26.47 &#215; 2)</td>
+                  </tr>
+                  <tr>
+                    <td>Introducing HTML5 by Bruce Lawson &#38; Remy Sharp</td>
+                    <td>Out of Stock</td>
+                    <td>1</td>
+                    <td>$22.23</td>
+                  </tr>
+                  <tr>
+                    <td>Bulletproof Web Design by Dan Cederholm</td>
+                    <td>In Stock</td>
+                    <td>1</td>
+                    <td>$30.17</td>
+                  </tr>
+
+                          <tr>
+                    <td>Don&#8217;t Make Me Think by Steve Krug</td>
+                    <td>In Stock</td>
+                    <td>1</td>
+                    <td>$30.02</td>
+                  </tr>
+                  <tr>
+                    <td>A Project Guide to UX Design by Russ Unger &#38; Carolyn Chandler</td>
+                    <td>In Stock</td>
+                    <td>2</td>
+                    <td>$52.94 ($26.47 &#215; 2)</td>
+                  </tr>
+                  <tr>
+                    <td>Introducing HTML5 by Bruce Lawson &#38; Remy Sharp</td>
+                    <td>Out of Stock</td>
+                    <td>1</td>
+                    <td>$22.23</td>
+                  </tr>
+                  <tr>
+                    <td>Bulletproof Web Design by Dan Cederholm</td>
+                    <td>In Stock</td>
+                    <td>1</td>
+                    <td>$30.17</td>
+                  </tr>
+
+                              <tr>
+                    <td>Don&#8217;t Make Me Think by Steve Krug</td>
+                    <td>In Stock</td>
+                    <td>1</td>
+                    <td>$30.02</td>
+                  </tr>
+                  <tr>
+                    <td>A Project Guide to UX Design by Russ Unger &#38; Carolyn Chandler</td>
+                    <td>In Stock</td>
+                    <td>2</td>
+                    <td>$52.94 ($26.47 &#215; 2)</td>
+                  </tr>
+                  <tr>
+                    <td>Introducing HTML5 by Bruce Lawson &#38; Remy Sharp</td>
+                    <td>Out of Stock</td>
+                    <td>1</td>
+                    <td>$22.23</td>
+                  </tr>
+                  <tr>
+                    <td>Bulletproof Web Design by Dan Cederholm</td>
+                    <td>In Stock</td>
+                    <td>1</td>
+                    <td>$30.17</td>
+                  </tr>
+         </table>
+
+        
 
 
 
