VB: Updated flask file

--- a/templates/search_page_new.html
+++ b/templates/search_page_new.html
@@ -2,7 +2,7 @@
 <html lang="en">
  
 <head>
-    <title>Find Free Market Value</title>
+    <title>Find Replacement Value</title>
  
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
  
@@ -16,7 +16,7 @@
         <div class="header">
             <nav>
                 <ul class="nav nav-pills pull-right">
-                    <li role="presentation" class="active"><a href="#">Home</a>
+                    <li role="presentation" class="active"><a href="/">Home</a>
                     </li>
                 </ul>
             </nav>
@@ -24,10 +24,9 @@
         </div>
  
         <div class="jumbotron">
-            <h1>Search for Equipment</h1>
+            <h1>Search for New Equipment</h1>
             <div class="search">
                 <form action="/search">
-                    <method=post role="form"!value="{{ request.form.search}}" -->
                     <input type=text name=search ></br>
                         <div class="actions"><input type=submit value="Search"></div>
                 </form>
