VB: Possible conflict with search page

--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -34,7 +34,7 @@
             {% endif %}
             
             <div class="search">
-                <form action="/search">
+                <form action="/search/used">
                     <input type=text name=search ></br>
                         <div class="actions"><input type=submit value="Search"></div>
                 </form>
