--- a/templates/result_page.html
+++ b/templates/result_page.html
@@ -24,7 +24,7 @@
                                 <li role="presentation" ><a href="/download/{{search_words}}/">Download Results</a></li>
                               </ul>
                             </nav> 
-                            <h1 class="keyword">{{search_words}}</h1>
+                            <h1 class="keyword">Keyword: {{search_words}}</h1>
                         </div>
                 
           </div>
@@ -33,9 +33,9 @@
       <div class="jumbotron">
                
             {% if condition == "new" %}
-            <h1>Search for New Equipment</h1>
+            <h1> New Equipment</h1>
             {% else %}
-            <h1>Search for Used Equipment</h1>
+            <h1> Used Equipment</h1>
             {% endif %}
            
                    
@@ -43,20 +43,24 @@
                    <div class="result_table">
 
                          <table>
-                                  <tr style="padding: 0 15px 0 15px">
-                                    <td style="padding: 0 15px 0 15px">Title</td>
-                                    <td style="padding: 0 15px 0 15px">Price</td>
-                                    <td style="padding: 0 15px 0 15px">Image</td>
-                                  </tr>
+                                 
+                                    {% if result|length>0 %}
+                                        <tr style="padding: 0 15px 0 15px">
+                                            <td style="padding: 0 15px 0 15px">Title</td>
+                                            <td style="padding: 0 15px 0 15px">Price</td>
+                                            <td style="padding: 0 15px 0 15px">Image</td>
+                                        </tr>
+                                        {% for r in result %}
+                                              <tr style="padding: 0 15px 0 15px">
+                                                <td style="padding: 0 15px 0 15px"> <a href={{r.url}}> {{r.title}}</a></td>
+                                                <td style="padding: 0 15px 0 15px">{{r.price}}</td>
+                                                <td style="padding: 0 15px 0 15px"><img src={{r.image_src}} alt="No Image" height= "75" width="75"></td>
+                                              </tr>
+                                        {% endfor %}
+                                    {% else %}
+                                       <p style="font-size:25px" > {{message}}</p>
+                                    {% endif %}
 
-                            {% for r in result %}
-                                  <tr style="padding: 0 15px 0 15px">
-                                    <td style="padding: 0 15px 0 15px"> <a href={{r.url}}> {{r.title}}</a></td>
-                                    <td style="padding: 0 15px 0 15px">{{r.price}}</td>
-                                    <td style="padding: 0 15px 0 15px"><img src={{r.image_src}} alt="No Image" height= "75" width="75"></td>
-        
-                                  </tr>
-                            {% endfor %}
                          </table>    
                   </div>
 
