edited wording in html files, scrape manufacturer in biosurplus

--- a/templates/main_equipment_page.html
+++ b/templates/main_equipment_page.html
@@ -34,7 +34,7 @@
         </div>
  
         <footer class="footer">
-            <p>&copy; Seeding Labs 2017</p>
+            <p>Seeding Labs 2017</p>
         </footer>
  
     </div>
