--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -23,7 +23,7 @@
                     </li>
                 </ul>
             </nav>
-            <h3 class="text-muted">Equipment Pricer</h3>
+            <h3 class="text-muted">Equipment Valuation</h3>
         </div>
  
         <div class="jumbotron">
@@ -42,7 +42,7 @@
         </div>
 
         <footer class="footer">
-            <p>&copy; Seeding Labs 2017</p>
+            <p>Seeding Labs 2017</p>
         </footer>
 </body>
  
