--- a/templates/main_equipment_page.html
+++ b/templates/main_equipment_page.html
@@ -4,7 +4,7 @@
 <head>
     <title>Equipment Valuation</title>
  
-    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap.css" rel="stylesheet">
  
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
  
