--- a/templates/main_equipment_page.html
+++ b/templates/main_equipment_page.html
@@ -6,7 +6,7 @@
  
     <link href="bootstrap.css" rel="stylesheet">
  
-    <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+    <link href="jumbotron-narrow.css" rel="stylesheet">
  
 </head>
  
