--- a/templates/main_equipment_page.html
+++ b/templates/main_equipment_page.html
@@ -4,9 +4,13 @@
 <head>
     <title>Equipment Valuation</title>
  
-    <link href="bootstrap.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
  
-    <link href="jumbotron-narrow.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" href="bootstrap.css">
+
+    <link rel="stylesheet" type="text/css" href="jumbotron-narrow.css">
  
 </head>
  
