aesthetic result page changes, extra stripping in backend match check

--- a/templates/result_page.html
+++ b/templates/result_page.html
@@ -34,7 +34,7 @@
             {% if condition == "new" %}
             <h2> Replacement Value is: ${{median}}</h2>
             {% else %}
-            <h2> Full Market Value is: ${{median}}</h2>
+            <h2> Free Market Value is: ${{median}}</h2>
             {% endif %}  
             </div>
 
@@ -54,9 +54,9 @@
                                  
                                     {% if result|length>0 %}
                                         <tr style="padding: 0 15px 0 15px">
+                                            <td style="padding: 0 15px 0 15px">Image</td>
                                             <td style="padding: 0 15px 0 15px">Title</td>
                                             <td style="padding: 0 15px 0 15px">Price</td>
-                                            <td style="padding: 0 15px 0 15px">Image</td>
                                         </tr>
                                         {% for r in result %}
                                               <tr style="padding: 0 15px 0 15px">
