--- a/templates/result_page.html
+++ b/templates/result_page.html
@@ -8,8 +8,10 @@
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
  
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+    <!--
     <link href="../static/signup.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="main.css">
+    -->
     
   </head>
  
@@ -67,7 +69,7 @@
                                               </tr>
                                         {% endfor %}
                                     {% else %}
-                                       <p style="font-size:25px" > {{message}}</p>
+                                       <p style="font-size:25px" > No Results Found </p>
                                     {% endif %}
 
                          </table>    
