removed unecessary css files, prettified median price, removed description Result attribute

--- a/templates/result_page.html
+++ b/templates/result_page.html
@@ -34,9 +34,9 @@
       <div class="jumbotron">
                
             {% if condition == "new" %}
-            <h2> Replacement Value is: ${{median}}</h2>
+            <h2> Replacement Value is: {{median}}</h2>
             {% else %}
-            <h2> Free Market Value is: ${{median}}</h2>
+            <h2> Free Market Value is: {{median}}</h2>
             {% endif %}  
             </div>
 
