--- a/templates/result_page.html
+++ b/templates/result_page.html
@@ -53,24 +53,24 @@
                    <div class="result_table">
 
                          <table>
-                                 
-                                    {% if result|length>0 %}
-                                        <tr style="padding: 0 15px 0 15px">
-                                            <td style="padding: 0 15px 0 15px">Image</td>
-                                            <td style="padding: 0 15px 0 15px">Title</td>
-                                            <td style="padding: 0 15px 0 15px">Price</td>
-                                        </tr>
-                                        {% for r in result %}
-                                              <tr style="padding: 0 15px 0 15px">
-                                              	<td style="padding: 0 15px 0 15px"><img src={{r.image_src}} alt="No Image" height= "75" width="75"></td>
-                                                <td style="padding: 0 15px 0 15px"> <a href={{r.url}}> {{r.title}}</a></td>
-                                                <td style="padding: 0 15px 0 15px">{{r.price}}</td>
-                                                
-                                              </tr>
-                                        {% endfor %}
-                                    {% else %}
-                                       <p style="font-size:25px" > No Results Found </p>
-                                    {% endif %}
+                             
+                                {% if result|length>0 %}
+                                    <tr style="padding: 0 15px 0 15px">
+                                        <td style="padding: 0 15px 0 15px">Image</td>
+                                        <td style="padding: 0 15px 0 15px">Title</td>
+                                        <td style="padding: 0 15px 0 15px">Price</td>
+                                    </tr>
+                                    {% for r in result %}
+                                          <tr style="padding: 0 15px 0 15px">
+                                          	<td style="padding: 0 15px 0 15px"><img src={{r.image_src}} alt="No Image" height= "75" width="75"></td>
+                                            <td style="padding: 0 15px 0 15px"> <a href={{r.url}} target="_blank"> {{r.title}}</a></td>
+                                            <td style="padding: 0 15px 0 15px">{{r.price}}</td>
+                                            
+                                          </tr>
+                                    {% endfor %}
+                                {% else %}
+                                   <p style="font-size:25px" > No Results Found </p>
+                                {% endif %}
 
                          </table>    
                   </div>
