--- a/templates/result_sorted.html
+++ b/templates/result_sorted.html
@@ -9,11 +9,10 @@
  
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
     <!--
-    <link rel=" stylesheet" type="text/css" href="main.css"/>
-
     <link href="../static/signup.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="main.css">
     -->
-
+    
   </head>
  
   <body>
@@ -32,31 +31,35 @@
                 
           </div>
 
-          <div class="jumbotron">
+      <div class="jumbotron">
         
+               
             {% if condition == "new" %}
             <h2> Replacement Value is: {{median}}</h2>
             {% else %}
             <h2> Free Market Value is: {{median}}</h2>
             {% endif %}  
-         </div>
-            <div class="sort_menu">
-                <ul class="nav nav-pills pull-right">
-                    <form id="searchSortForm" method="get" action="/sort/{{search_words}}/" class="s-inline-form">
-                        <span class="a-size-base">Sort by&nbsp;</span>
-                        <select class="a-spacing-top-mini" style="vertical-align: baseline;" name="sort" id="sort" onchange="this.form.submit()">
-                            <option value="relevancerank">Relevance</option>
-                                        <option value="featured-rank">Featured</option>
-                                        <option value="price-asc-rank">Price: Low to High</option>
-                                        <option value="price-desc-rank">Price: High to Low</option>
-                                        <option value="review-rank">Avg. Customer Review</option>
-                                        </select>
-                        <noscript>&amp;lt;input type="image" src="https://images-na.ssl-images-amazon.com/images/G/01/buttons/go-orange-trans._CB192189913_.gif"  width="21" alt="Go" align="top" value="Go" height="21" border="0" /&amp;gt;</noscript>
-                    </form>
-                </ul> 
-            </div>           
+            </div>
+
       <div class="jumbotron">
-    
+<!--
+            <form id="searchSortForm" method="post" action="/results/<search_words>/sort=price_desc" class="s-inline-form"><input type="hidden" name="keywords" value="sunscreen">
+                <input type="hidden" name="fst" value="as:on">
+                <input type="hidden" name="rh" value="k:sunscreen,n:3760911,n:11060451">
+                <input type="hidden" name="qid" value="1485719980">
+                <span class="a-size-base">Sort by&nbsp;</span>
+                <select class="a-spacing-top-mini" style="vertical-align: baseline;" name="sort" id="sort" onchange="">
+                    <option value="relevancerank">Relevance</option>
+                                    <option value="featured-rank">Featured</option>
+                                    <option value="price-asc-rank">Price: Low to High</option>
+                                    <option value="price-desc-rank"><a href="/results/{{search_words}}/sort=price_desc">Price: High to Low</a></option>
+                                    <option value="review-rank">Avg. Customer Review</option>
+                </select>
+                <noscript>&amp;lt;input type="image" src="https://images-na.ssl-images-amazon.com/images/G/01/buttons/go-orange-trans._CB192189913_.gif"  width="21" alt="Go" align="top" value="Go" height="21" border="0" /&amp;gt;</noscript>
+           
+           </form>
+-->
+               
             {% if condition == "new" %}
             <h2> Results for New Equipment with Keywords: {{search_words}}</h2>
             {% else %}
@@ -64,18 +67,18 @@
             {% endif %}
            
                    
-   
+
                    <div class="result_table">
 
                          <table>
                                  
-                                    {% if result|length>0 %}
+                                    {% if sorted_result|length>0 %}
                                         <tr style="padding: 0 15px 0 15px">
                                             <td style="padding: 0 15px 0 15px">Image</td>
                                             <td style="padding: 0 15px 0 15px">Title</td>
                                             <td style="padding: 0 15px 0 15px">Price</td>
                                         </tr>
-                                        {% for r in result %}
+                                        {% for r in sorted_result %}
                                               <tr style="padding: 0 15px 0 15px">
                                               	<td style="padding: 0 15px 0 15px"><img src={{r.image_src}} alt="No Image" height= "75" width="75"></td>
                                                 <td style="padding: 0 15px 0 15px"> <a href={{r.url}}> {{r.title}}</a></td>
